<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ProfileActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <include
            android:id="@+id/profileactiity_toolbar"
            layout="@layout/bar_layout"
            />

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="400dp"
            android:scaleType="fitXY"
            android:id="@+id/profile_activity_imageview"
            tools:src="@drawable/default_pic"
            />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:orientation="vertical"
        >

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/name"
            android:textColor="@color/black"
            android:textSize="18sp"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text="Himanshu Wasan"
            android:textSize="18sp"
            android:textStyle="bold"
            android:textColor="@color/colorPrimary"
            android:id="@+id/profile_activiy_nametv"
            />

    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:orientation="vertical"
        >

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/email"
            android:textColor="@color/black"
            android:textSize="18sp"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:textColor="@color/colorPrimary"
            android:textStyle="bold"
            android:id="@+id/profile_activity_emailtv"
            tools:text="wasanhimanshu@gmail.com"
            />

    </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:orientation="vertical"
            >

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/phone"
                android:textColor="@color/black"
                android:textSize="18sp"
                />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                android:textColor="@color/colorPrimary"
                android:textStyle="bold"
                android:id="@+id/profile_activity_phonetv"
                tools:text="1234567890"
                />

        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:orientation="vertical"
            >

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/bio"
                android:textColor="@color/black"
                android:textSize="18sp"
                />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                android:textColor="@color/colorPrimary"
                android:textStyle="bold"
                android:id="@+id/profile_activity_biotv"
                tools:text="Hey There I am Using Connect Chat App!"
                />

        </LinearLayout>

<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/media"
            android:textColor="@color/colorPrimary"
            android:id="@+id/mediatv"
            android:layout_alignParentStart="true"
            android:textSize="20sp"
            android:textStyle="bold"
            />

   <TextView
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:layout_alignParentEnd="true"
       tools:text="2"
       android:textColor="@color/colorPrimary"
       android:textSize="20sp"
       android:layout_marginEnd="10dp"
       android:id="@+id/media_count"
       />




</RelativeLayout>
        <androidx.recyclerview.widget.RecyclerView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/profile_activity_recyclerview"
            />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:layout_margin="10dp"
            android:orientation="horizontal"
            android:id="@+id/block_ll"
            >

            <ImageButton
                android:layout_width="0dp"
                android:layout_height="30dp"
                android:background="@color/white"
                android:layout_weight=".25"
                android:src="@drawable/ic_baseline_do_not_disturb_alt_24"
                />

            <TextView
                android:layout_width="0dp"
                android:layout_height="30dp"
                android:text="@string/block"
                android:gravity="center_horizontal"
                android:layout_weight="1.25"
                android:textSize="20sp"
                android:textColor="@color/red"
                />


        </LinearLayout>


    </LinearLayout>




    



</ScrollView>