<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="180dp"
        android:layout_gravity="center"
        android:layout_height="180dp">

<de.hdodenhof.circleimageview.CircleImageView
    android:layout_width="180dp"
    android:layout_height="180dp"
    android:layout_gravity="center"
    android:id="@+id/profile_frag_imageview"
    android:layout_marginTop="20dp"
    tools:src="@drawable/default_pic"

    />
        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_baseline_add_a_photo_24"
            android:layout_alignParentBottom="true"
            android:layout_alignParentEnd="true"
            android:id="@+id/selectaphoto"
            />

        <ProgressBar
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:id="@+id/select_imagepb"
            android:visibility="gone"
            style="@style/Widget.AppCompat.ProgressBar"
            />
    </RelativeLayout>


<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="50dp"
    android:id="@+id/name_edit_ll"
    android:layout_marginTop="10dp"
    android:orientation="horizontal"
    >

    <ImageButton
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:background="@color/white"
        android:layout_weight="0.25"
        android:src="@drawable/ic_baseline_person_24"
        />

    <LinearLayout
        android:layout_width="0dp"
        android:layout_marginStart="10dp"
        android:layout_weight="2"
        android:layout_height="50dp"
        android:orientation="vertical"
        >

        <TextView
            android:layout_width="match_parent"
            android:layout_height="25dp"
            android:text="@string/name"
            android:textSize="16sp"
            android:textStyle="bold"

            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="25dp"
            tools:text="Himanshu Wasan"
            android:textSize="16sp"
            android:textColor="@color/colorPrimary"
            android:id="@+id/profile_frag_nametv"
            android:textStyle="bold"

            />
    </LinearLayout>

    <ImageButton
        android:layout_width="0dp"
        android:layout_weight="0.25"
        android:layout_height="50dp"
        android:src="@drawable/ic_baseline_edit_24"
        android:background="@color/white"
        />
</LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="10dp"
        android:orientation="horizontal"
        >

        <ImageButton
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:background="@color/white"
            android:layout_weight="0.25"
            android:src="@drawable/ic_baseline_email_24"
            />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_marginStart="10dp"
            android:layout_weight="2"
            android:layout_height="50dp"
            android:orientation="vertical"
            >

            <TextView
                android:layout_width="match_parent"
                android:layout_height="25dp"
                android:text="@string/email"
                android:textSize="16sp"
                android:textStyle="bold"

                />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="25dp"
                tools:text="wasanhimanshu@gmail.com"
                android:textSize="16sp"
                android:textColor="@color/colorPrimary"
                android:id="@+id/profile_frag_emailtv"
                android:textStyle="bold"

                />
        </LinearLayout>


    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:id="@+id/profile_phone_editll"
        android:layout_marginTop="10dp"
        android:orientation="horizontal"
        >

        <ImageButton
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:background="@color/white"
            android:layout_weight="0.25"
            android:src="@drawable/ic_baseline_phone_24"
            />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_marginStart="10dp"
            android:layout_weight="2"
            android:layout_height="50dp"
            android:orientation="vertical"
            >

            <TextView
                android:layout_width="match_parent"
                android:layout_height="25dp"
                android:text="@string/phone"
                android:textSize="16sp"
                android:textStyle="bold"

                />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="25dp"
                tools:text="1234567890"
                android:textSize="16sp"
                android:textColor="@color/colorPrimary"
                android:id="@+id/profile_frag_phonetv"
                android:textStyle="bold"

                />
        </LinearLayout>

        <ImageButton
            android:layout_width="0dp"
            android:layout_weight="0.25"
            android:layout_height="50dp"
            android:src="@drawable/ic_baseline_edit_24"
            android:background="@color/white"
            />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:id="@+id/profile_bio_editll"
        android:layout_marginTop="10dp"
        android:orientation="horizontal"
        >

        <ImageButton
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:background="@color/white"
            android:layout_weight="0.25"
            android:src="@drawable/ic_baseline_info_24"
            />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_marginStart="10dp"
            android:layout_weight="2"
            android:layout_height="50dp"
            android:orientation="vertical"
            >

            <TextView
                android:layout_width="match_parent"
                android:layout_height="25dp"
                android:text="@string/bio"
                android:textSize="16sp"
                android:textStyle="bold"

                />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="25dp"
                tools:text="Hey there i am using Connect App!!"
                android:textSize="16sp"
                android:textColor="@color/colorPrimary"
                android:id="@+id/profile_frag_biotv"
                android:textStyle="bold"

                />
        </LinearLayout>

        <ImageButton
            android:layout_width="0dp"
            android:layout_weight="0.25"
            android:layout_height="50dp"
            android:src="@drawable/ic_baseline_edit_24"
            android:background="@color/white"
            />
    </LinearLayout>




</LinearLayout>